--- a/css/estilos.css
+++ b/css/estilos.css
@@ -19,3 +19,28 @@ h1{
     background-color: hsl(213, 76%, 10%);
     font-size: 1.5em;
 }
+#botones{
+    margin: 24px 0px;
+}
+    #botones a{
+        background-color: hsl(41, 88%, 60%);
+        color: hsl(41, 88%, 12%);
+        padding: 8px 24px;
+        border-radius: 10px;
+        text-decoration: none;
+        font-weight: 500;
+        transition: 500ms;
+    }
+    #botones a:hover{
+        background-color: hsl(41, 88%, 72%);
+        box-shadow: 0px 0px 8px hsl(41, 88%, 72%);
+    }
+#caja{
+    margin: 40px;
+    width: 216px;
+    height: 216px;
+    border-radius: 16px;
+    background-color: #aaa;
+    padding: 24px;
+    transition: 500ms;
+}
